add syscall replay helper

--- a/src/interp/CMakeLists.txt
+++ b/src/interp/CMakeLists.txt
@@ -23,6 +23,8 @@ SET(SRC
 	user_entry.h
 	user_entry.c
 	replayer.c
+	syscall_replayer.h
+	syscall_replayer.c
 	)
 ADD_LIBRARY(interp SHARED
 	${SRC})
