mask signals when replay

--- a/src/arch/x86/interp/CMakeLists.txt
+++ b/src/arch/x86/interp/CMakeLists.txt
@@ -25,6 +25,9 @@ SET(SRC
 	arch_replayer.S
 	arch_replayer.c
 	arch_replayer.h
+
+	arch_signal.c
+	arch_signal.h
 	)
 
 SET_SOURCE_FILES_PROPERTIES(kutils.c
