--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ SET(tests
 	test_sigbus
 	test_gscall
 	test_sigthread
+	test_sigsuspend
 	)
 
 build_interp_tests("${tests}" "")
@@ -91,6 +92,12 @@ SET_PROPERTY(TARGET test_gscall
 	APPEND
 	PROPERTY LINK_FLAGS "-Wl,-dynamic-linker,${CMAKE_BINARY_DIR}/src/interp/libinterp.so"
 	)
+
+SET_PROPERTY(TARGET test_sigsuspend
+	APPEND
+	PROPERTY LINK_FLAGS "-Wl,-dynamic-linker,${CMAKE_BINARY_DIR}/src/interp/libinterp.so"
+	)
+
 
 ## SET(CAN_USE_ASSEMBLER TRUE)
 ## ENABLE_LANGUAGE(ASM-S)
