fix a bug when map libraries: lost of some data

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -22,7 +22,7 @@ SET(tests
 	test_gscall
 	test_sigthread
 	test_sigsuspend
-	test_localtime_r
+	test_dl_addr
 	)
 
 build_interp_tests("${tests}" "")
@@ -99,7 +99,7 @@ SET_PROPERTY(TARGET test_sigsuspend
 	PROPERTY LINK_FLAGS "-Wl,-dynamic-linker,${CMAKE_BINARY_DIR}/src/interp/libinterp.so"
 	)
 
-SET_PROPERTY(TARGET test_localtime_r
+SET_PROPERTY(TARGET test_dl_addr
 	APPEND
 	PROPERTY LINK_FLAGS "-Wl,-dynamic-linker,${CMAKE_BINARY_DIR}/src/interp/libinterp.so"
 	)
